# gdlib

./: .gitignore  Cargo.toml  README.md  build.rs  changelog.md  main.py  refactor.py  todo.md
.github/: CONTRIBUTING.md
GMDS/: level.gmd  level_export.gmd
examples/: minimal.rs
src/: core.rs  deserialiser.rs  gdlevel.rs  lib.rs  not_added.rs  rand.rs  serialiser.rs  tests.rs  utils.rs
src/ccgamemanager/: mod.rs
src/cclocallevels/: mod.rs  properties.rs
src/cclocallevels/gdlevel/: enums.rs  leveldata.rs  mod.rs  new.rs
src/cclocallevels/gdlist/: mod.rs
src/cclocallevels/gdobj/: defaults.rs  lookup.rs  meta.rs  mod.rs  structs.rs
src/cclocallevels/gdobj/constructors/: misc.rs  mod.rs  triggers.rs
src/core/: crypto.rs  io.rs  mod.rs  rand.rs  structs.rs
src/gdobj/: defaults.rs  general.rs  ids.rs  lookup.rs  misc.rs  mod.rs  objs.rs  triggers.rs
test_gmds/: Summer Vacation.gmdl  empty test level.gmd
