[package]
name = "gdlib"
version = "0.1.0"
edition = "2024"

description = "Rust library for editing Geometry Dash savefiles"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ArrowSlashArrow/gdlib"
keywords = ["geometrydash", "gd", "fast", "api"]
categories = ["geometry-dash", "gd"]
readme = "README.md"
authors = ["ArrowSlashArrow arrowslasharrow.dev@gmail.com"]


[dependencies]
aho-corasick = "1.1.3"
base64 = "0.22.1"
crc32fast = "1.5.0"
flate2 = { version = "1.1.2", features = ["zlib"] }
plist = "1.7.4"
rayon = "1.11.0"
serde = "1.0.219"
serde_json = "1.0.143"
